# bitbox-bridge

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config  config.toml
.ci/: ci
.github/workflows/: ci.yml
bitbox-bridge/: Cargo.toml
bitbox-bridge/release/: Dockerfile  Makefile  README.md  release.sh
bitbox-bridge/release/darwin/: .gitignore  Dockerfile  Makefile  ch.shiftcrypto.bitboxbridge.plist  distribution.xml  entitlements.plist  package.sh  release.sh
bitbox-bridge/release/darwin/resources/: conclusion.html  welcome.html
bitbox-bridge/release/darwin/scripts/: postinstall  preinstall
bitbox-bridge/release/linux/: .gitignore  Dockerfile  Makefile  bitbox-bridge.service  hid-digitalbitbox.rules  post-install.sh  pre-install.sh  pre-remove.sh  release.sh
bitbox-bridge/release/windows/: .gitignore  Dockerfile  Makefile  README.md  getVersion.nsi  release.sh  setup.nsi
bitbox-bridge/release/windows/nsis/: getVersion.nsi  package.cmd  setup.nsi
bitbox-bridge/release/windows/resources/: convert.sh
bitbox-bridge/release/windows/wix/: Bundle.wxs  Common.wxl  Components.wxs  Directories.wxs  HyperlinkTheme.xml  Product.wxs  README.md  bitboxbridge-codesign.cmd  bundle.wixproj  package-unsigned.cmd  package.cmd  project.wixproj  signtool.cmd
bitbox-bridge/resources/: confirmation_dialog.html  index.html
bitbox-bridge/src/: error.rs  main.rs  usb.rs  web.rs
bitbox-bridge/src/daemon/: unix.rs  windows.rs
hidapi-async/: Cargo.toml
hidapi-async/src/: lib.rs
u2fframing/: Cargo.toml
u2fframing/src/: lib.rs
