[package]
name = "hidapi-async"
version = "0.1.1"
authors = ["Niklas Claesson <nicke.claesson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Asynchronous bindings to hidapi"
repository = "https://github.com/digitalbitbox/bitbox-bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
log = "0.4.8"
# Can be switched back to upstream once https://github.com/ruabmbua/hidapi-rs/issues/115 is fixed.
hidapi = { git ="https://github.com/benma/hidapi-rs.git", branch="update-hidapi" }
async-std = "1.2.0"
thiserror = "1.0.9"
