[package]
name = "hidapi-async"
version = "0.1.1"
authors = ["Niklas Claesson <nicke.claesson@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Asynchronous bindings to hidapi"
repository = "https://github.com/digitalbitbox/bitbox-bridge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
log = { workspace = true }
hidapi = "2.6.1"
thiserror = { workspace = true }
